# sara

./: .gitignore  Cargo.toml  README.md
assets/data/: level0.m  level0.sbc  level1.sbc
src/data/: level.rs  mod.rs  player.rs
src/model/player/: mod.rs  player_manager.rs  prelude.rs
src/model/tile/: passbox.rs  prelude.rs  wall.rs
src/sara/: main.rs
src/sara/data/: level.rs  player.rs  prelude.rs
src/sara/model/: mod.rs  prelude.rs
src/sara/model/player/: mod.rs  player_manager.rs
src/sara/model/tile/: hitbox.rs  mod.rs  passbox.rs  wall.rs
src/sara/scene/: game_over.rs  mod.rs  start.rs
src/sara/scene/in_game/: mod.rs  pause.rs
src/sara/scene/in_game/level/: ccamera.rs  mod.rs  parallax.rs  tilemap.rs
src/sara/sound/: mod.rs
src/sara/utils/: aseprite.rs  mod.rs  prelude.rs  shadow.rs
src/scene/: mod.rs
src/scene/in_game/: pause.rs
src/scene/in_game/level/: mod.rs  parallax.rs  tilemap.rs
src/tiles/: main.rs
src/tiles/tile/: data.rs  mod.rs  prelude.rs  ui.rs
src/tiles/tile/model/: hitbox.rs  mod.rs  passbox.rs  wall.rs
src/tiles/ui/: mod.rs  tiles.rs  tools.rs
src/tiles/utils/: aseprite.rs  editline.rs  mod.rs  prelude.rs
