[package]
name = "sara"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = []

[profile.dev]
opt-level = 3

[[bin]]
name = "sara"
path = "src/sara/main.rs"
[[bin]]
name = "tiles"
path = "src/tiles/main.rs"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16.1" , features = ["dynamic_linking"] }
bincode = "2.0.1"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
